--- a/layouts/partials/inject/head.html
+++ b/layouts/partials/inject/head.html
@@ -1,2 +1,2 @@
 <!-- This code will be injected before closing the head tag -->
-<script defer src="https://cloud.umami.is/script.js" data-website-id="d2f21627-6704-4994-9a55-c722fd94be83"></script>
+<script defer src="/script.js" data-website-id="d2f21627-6704-4994-9a55-c722fd94be83"></script>
