--- a/layouts/shortcodes/pdfgal.html
+++ b/layouts/shortcodes/pdfgal.html
@@ -1,4 +1,4 @@
-{{ $filePath  := printf "./static" }}
+{{ $filePath  := printf "./static/pdfs" }}
 {{ $withCaptions := .Get "withCaptions"}}
 {{ $gallery := .Get "id" }}
 
@@ -12,7 +12,7 @@
   src="/{{.Name}}"
   type="application/pdf"
   width="100%"
-  height="1000"
+  height="500"
   title="Embedded PDF Viewer"
 />
        <i class="fas fa-file-pdf"></i> {{ $caption}}
