--- a/layouts/shortcodes/pdfgal.html
+++ b/layouts/shortcodes/pdfgal.html
@@ -9,7 +9,7 @@
    {{ if $display}}
    <div class="file-list-item">
     <embed
-  src="/{{.Name}}"
+  src="/pdfs/{{.Name}}"
   type="application/pdf"
   width="100%"
   height="500"
