--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -17,5 +17,11 @@
         {{- partial "plausible.html" . -}}
         {{- partial "umami.html" . -}}
         {{- partial "inject/body.html" . -}}
+	{{ if .Store.Get "hasMermaid" }}
+  	<script type="module">
+  	  import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.esm.min.mjs';
+    	mermaid.initialize({ startOnLoad: true });
+ 	</script>
+		{{ end }}
     </body>
 </html>
