--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -8,4 +8,10 @@
     <p><small>
         {{ i18n "themeCopyrightNotice" | safeHTML }}
     </small></p>
+<script src="{{ "js/mermaid.min.js" | relURL }}"></script>
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+  mermaid.initialize({ startOnLoad: true });
+});
+</script>
 </footer>
